# OpenCLPractice

./: CMakeLists.txt  main.cpp
